2011-04-29  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.4.0

	- Replace slow Dijkstra-based labelling of the whole image by new
	very fast region grow algorithm bwregiongrow().

	* FiltersToolbox/bwregiongrow.m: v0.2.0

	- Remove all Matlab code, that was very slow and inefficient. This
	function is now fully implemented in C++ in the corresponding MEX
	function, that is very fast.

	* FiltersToolbox/bwregiongrow.cpp: v0.2.1

	- Add input argument maxiter, to limit the number of grow
	iterations of the algorithm.

	* FiltersToolbox/CMakeLists.txt:

	- Rename FiltersToolbox/bwregiongrow_aux.cpp as
	FiltersToolbox/bwregiongrow.cpp.

	* Rename FiltersToolbox/bwregiongrow_aux.cpp as
	FiltersToolbox/bwregiongrow.cpp.

	* FiltersToolbox/bwregiongrow_aux.cpp: v0.2.0

	- Complete rewrite of the function. Now instead of implementing
	only a loop of the Matlab function, it implements the whole region
	grow algorithm. We don't need to use a distance matrix, and the
	algorithm is super fast (6 sec with the right.mha image that
	would've probably taken over 35 min with the Dijkstra Matlab
	method, and a lot more with the region grow implemented in Matlab).

2011-04-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/bwregiongrow.m:

	- BWREGIONGROW  Region grow segmentation of binary image from
	multiple seeds.

	* Add FiltersToolbox/bwregiongrow_aux.cpp: v0.1.0

	- This is an auxiliary function to bwregiongrow.m, to implement
	part of the algorithm in C++ so that we can avoid a costly loop in
	Matlab.

2011-04-26  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* ItkToolbox/ItkImFilter.cpp:

	- Change a type that was int to mwSize, so that it can be compiled
	for 64 bit architectures.

	* matlab/MatlabMakeMacros.cmake:

	- In 64 bit architectures, we need to remove the flag
	-DMX_COMPAT_32 (this is what mex -largeArrayDims does).

	* FiltersToolbox/seg2dmat.m: v0.2.1
